--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_staggered_grid_view: ^0.7.0
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +64,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/images/discover.png
-  #   - images/a_dot_ham.jpeg
+    - lib/images/employer_image1.png
+    - lib/images/employer_image2.png
+    - lib/images/employer_image3.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
